Upgrade to uswds v2.0.3

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,6 +12,15 @@ pre {
   font-weight: 400;
 }
 
+h1 code,
+h2 code,
+h3 code,
+h4 code,
+h5 code,
+h6 code {
+  font-size: .9em;
+}
+
 pre {
   padding: 1rem;
 }
