--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -66,22 +66,13 @@
       <div class="usa-footer__secondary-section" id="footer-main">
         <div class="grid-container">
           <div class="grid-row grid-gap">
-            <div class="desktop:grid-col-12">
-
-              <span class="">
-                Made with <a href="https://gohugo.io/">Hugo</a> v{{ hugo.Version}} |
-                Themed by <a href="https://v2.designsystem.digital.gov/">USWDS</a> v2.0.3 | 
-                <a href="/index.xml">RSS feed</a>
-              </span>
-              
-              <br>
-              <br>
-
+            <div class="grid-col-12">
+              Made with <a href="https://gohugo.io/">Hugo</a> v{{ hugo.Version}}. Themed by <a href="https://v2.designsystem.digital.gov/">USWDS</a> v2.0.3. <a href="/index.xml">RSS feed</a>. 
+              <br><br>
               <details>
                 <summary>Hugo debug info</summary>
                 {{ partial "debug-table.html" . }}
               </details>
-              
             </div>
           </div>
         </div>
