Tweak next/prev links

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -60,14 +60,9 @@ blockquote {
   color: inherit;
 }
 
-/* Prev and Next post buttons */
-#prev-and-next {
-  max-width: initial;
-  margin-top: 2em;
-}
-#prev-and-next .usa-button {
-  width: initial;
-  margin-right: initial;
+/* Next and Previous */
+.post-next-prev a {
+  color: inherit;
 }
 
 /* Footer */
