--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -45,9 +45,13 @@ blockquote {
 
 /* Table of contents */
 .toc {
-  border: 1px solid #dcdee0;
+  border: .25rem solid #dcdee0;
   padding: 1rem; 
   margin-top: 1rem;
+}
+
+.toc a {
+  text-decoration: none;
 }
 
 /* Navbar */
@@ -58,6 +62,12 @@ blockquote {
 /* Tags */
 .post-tags a {
   color: inherit;
+  text-decoration: none;
+}
+
+/* Header links */
+.header-link {
+  text-decoration: none; 
 }
 
 /* Footer */
@@ -69,4 +79,9 @@ blockquote {
 #footer-main,
 #footer-main a {
   color: #757575;
+}
+
+#debug-info button {
+  background-color: initial;
+  border: .25rem solid #dcdee0;
 }
