Make debug info a true/false

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -69,7 +69,7 @@
             <div class="grid-col-12 text-center">
               
               Made with <a href="https://gohugo.io/">Hugo</a> and <a href="https://designsystem.digital.gov/">USWDS</a>
-              {{ if site.IsServer }}
+              {{ if false }}
               <br><br>
                 <div class="text-left">
                   {{ partial "debug-table.html" . }}
