--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -19,9 +19,13 @@
   {{ errorf "Invalid image processing command: Must be one of Fit, Fill, Resize, Original." }}
 {{ end }}
 
-<figure>
+<div class="usa-image-block">
   <a href="{{ $original.RelPermalink }}">
     <img src="{{ $new.RelPermalink }}" alt="{{ $alt }}">
   </a>
-  <figcaption>{{ $caption | markdownify }}</figcaption>
-</figure>
+  <div class="usa-image-text-block">
+    <small>
+      <p class="usa-image-text text-gray-50">{{ $caption | markdownify }}</p>
+    </small>
+  </div>
+</div>
