Order terms from a to z

--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
   <ul>
-    {{ range .Data.Terms.ByCount }}
+    {{ range .Data.Terms.Alphabetical }}
       <li>
         <span class="text-gray-50">({{ .Count }})</span>
         <a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a>
