--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -49,7 +49,6 @@ blockquote {
   border-left: .25rem solid #757575;
   padding-left: 1rem;
   margin-left: 0;
-  max-width: 68ex;
 }
 
 /* Table of contents */
@@ -105,4 +104,25 @@ blockquote {
 
 #disqus-comments {
   display: none; 
+}
+
+/* Prose max length overrides */
+.usa-list li,
+.usa-prose > ol li,
+.usa-prose > ul li {
+  max-width: initial;
+}
+
+.usa-paragraph {
+  max-width: initial;
+}
+
+.usa-content ol:not(.usa-accordion):not(.usa-accordion--bordered),
+.usa-content p,
+.usa-content ul:not(.usa-accordion):not(.usa-accordion--bordered) {
+  max-width: initial;
+}
+
+.usa-prose > p {
+  max-width: initial;
 }
