rename post dir to blog

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,7 +38,7 @@
             {{ range site.Menus.nav }}
               {{ $active := or ($current.IsMenuCurrent "nav" .) ($current.HasMenuCurrent "nav" .) }}
               {{ $active = or $active (eq .Name $current.Title) }}
-              {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "post")) }}
+              {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "blog")) }}
               {{ $active = or $active (and (eq .Name "Tags") (eq $current.Section "tags")) }}
               <li class="usa-nav__primary-item">
                 <a class="usa-nav__link {{ if $active }}usa-current{{ end }}" href="{{ .URL }}">
