--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
   <ul>
-    {{ range where .Pages.ByPublishDate.Reverse "Section" "post" }}
+    {{ range .Pages.ByPublishDate.Reverse }}
       <li>
         {{ $dateFormat := (partial "date-format.html" | string) }}
         <span class="text-gray-50">{{ .PublishDate.Format $dateFormat }}</span>
