google ads param

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -86,5 +86,6 @@
     <script src="{{ $themeJs.RelPermalink }}"></script>
 
     {{ partial "google-analytics-async.html" . }}
+    {{ partial "google-ads-async.html" . }}
   </body>
 </html>
