--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -68,7 +68,10 @@
           <div class="grid-row grid-gap">
             <div class="grid-col-12 text-center">
               
-              Made with <a href="https://gohugo.io/">Hugo</a> and <a href="https://designsystem.digital.gov/">USWDS</a>
+              {{ with site.Params.footer }}
+                {{ . | markdownify }}
+              {{ end }}
+
               {{ if false }}
               <br><br>
                 <div class="text-left">
