add prev and next links

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -51,10 +51,10 @@
       </div>
     </header>
 
-    <main class="usa-layout-docs usa-section" id="main-content">
+    <main class="usa-section" id="main-content">
       <div class="grid-container">
         <div class="grid-row grid-gap">
-          <div class="usa-layout-docs__main desktop:grid-col-12 usa-prose">
+          <div class="tablet:grid-col usa-prose">
             {{ block "main" . }}{{ end }}
           </div>
         </div>
