--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -71,7 +71,7 @@
               {{ with site.Params.footer }}
                 {{ . | markdownify }}
                 <br>
-                Last deployed on {{ now.Format "2006-01-02 15:04 -0700" }}
+                Last deployed on {{ now.Format "2006-01-02" }}
               {{ end }}
 
               {{ if false }}
