various theme tweaks:
bump hugo version

give tag links an underline

use bullet instead of pipe

add blog count

edit toc style

set prose max length

delimit tags by bullet

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -10,7 +10,7 @@
     {{ with .Lastmod }}
       {{ $formattedLastmod := .Format $dateFormat }}
       {{ if gt $formattedLastmod $formattedPublishDate }}
-        | <strong>Lastmod: </strong>{{ $formattedLastmod }}
+        &bull; <strong>Lastmod: </strong>{{ $formattedLastmod }}
       {{ end }}
     {{ end }}
     
@@ -24,7 +24,7 @@
           {{ $element := printf "<a href=\"%s\">%s</a>" $href . }}
           {{ $tags = $tags | append $element }}
         {{ end }}
-        {{ delimit $tags ", " }}
+        {{ delimit $tags " &bull; " }}
       {{ end }}
     </span>
   </p>
