--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -53,7 +53,7 @@ blockquote {
 
 /* Table of contents */
 .toc {
-  border: .25rem solid #757575;
+  border: 1px solid #757575;
   padding: 1rem; 
   margin-top: 1rem;
   color: #757575;
@@ -61,7 +61,6 @@ blockquote {
 
 .toc a,
 .toc a:visited {
-  text-decoration: none;
   color: #757575;
 }
 
@@ -74,7 +73,6 @@ blockquote {
 .post-tags a,
 .post-tags a:visited {
   color: inherit;
-  text-decoration: none;
 }
 
 /* Header links */
@@ -104,25 +102,4 @@ blockquote {
 
 #disqus-comments {
   display: none; 
-}
-
-/* Prose max length overrides */
-.usa-list li,
-.usa-prose > ol li,
-.usa-prose > ul li {
-  max-width: initial;
-}
-
-.usa-paragraph {
-  max-width: initial;
-}
-
-.usa-content ol:not(.usa-accordion):not(.usa-accordion--bordered),
-.usa-content p,
-.usa-content ul:not(.usa-accordion):not(.usa-accordion--bordered) {
-  max-width: initial;
-}
-
-.usa-prose > p {
-  max-width: initial;
 }
