update count on event

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <h1>{{ .Title }}</h1>
-<p class="text-gray-50">Count: {{ len .Pages }}</p>
+<p class="text-gray-50" id="list-count">Count: {{ len .Pages }}</p>
 <input
   class="usa-input"
   id="search"
