param to show prev next links

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -35,18 +35,19 @@
   
   {{ partial "header-link.html" .Content }}
 
-  {{ with .NextInSection }}
-    <br>
-    <span class="text-gray-50">
-      <strong>Next:</strong> <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-    </span>
-  {{ end }}
-
-  {{ with .PrevInSection }}
-    <br>
-    <span class="text-gray-50">
-      <strong>Previous:</strong> <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-    </span>
+  {{ if eq site.Params.show_prev_next_links true }}
+    <div id="next-and-prev">
+      {{ with .NextInSection }}
+        <div class="text-gray-50">
+          <strong>Next:</strong> <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+        </div>
+      {{ end }}
+      {{ with .PrevInSection }}
+        <div class="text-gray-50">
+          <strong>Previous:</strong> <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+        </div>
+      {{ end }}
+    </div>
   {{ end }}
   
   {{ if ne .Params.show_comments false }}
