--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,7 @@
   class="usa-input"
   id="search"
   type="text"
-  placeholder="Search by title..."
+  placeholder="Search by title"
   aria-label="Search by title"
 />
 {{ end }}
