--- a/layouts/shortcodes/gallery.html
+++ b/layouts/shortcodes/gallery.html
@@ -19,9 +19,16 @@
       {{ errorf "Invalid image processing command: Must be one of Fit, Fill, Resize, Original." }}
     {{ end }}
 
-    <a href="{{ $original.RelPermalink }}">
-      <img src="{{ $new.RelPermalink }}" class="margin-top-2">
-    </a>
+    <div class="usa-image-block margin-top-2">
+      <a href="{{ $original.RelPermalink }}">
+        <img src="{{ $new.RelPermalink }}">
+      </a>
+      <!-- <div class="usa-image-text-block">
+        <small>
+          <p class="usa-image-text text-gray-50">{{ "todo" }}</p>
+        </small>
+      </div> -->
+    </div>
 
   {{ end }}
 {{ end }}
