--- a/layouts/_default/_markup/render-heading.html
+++ b/layouts/_default/_markup/render-heading.html
@@ -1,3 +1,3 @@
 <h{{ .Level }} id="{{ .Anchor | safeURL }}">
-  {{ .Text | safeHTML }} <a href="#{{ .Anchor | safeURL }}" class="header-link">#</a>
+  <a href="#{{ .Anchor | safeURL }}" class="header-link">#</a> {{ .Text | safeHTML }}
 </h{{ .Level }}>
