search by title OR content

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,8 +6,8 @@
   class="usa-input"
   id="search"
   type="text"
-  placeholder="Search by title"
-  aria-label="Search by title"
+  placeholder="Search by title or content"
+  aria-label="Search by title or content"
 />
 {{ end }}
 <ul id="list">
