Search by title, content, or publish date

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,8 +6,8 @@
   class="usa-input"
   id="search"
   type="text"
-  placeholder="Search by title or content"
-  aria-label="Search by title or content"
+  placeholder="{{ site.Data.constants.search_label }}"
+  aria-label="{{ site.Data.constants.search_label }}"
 />
 {{ end }}
 <ul id="list">
