--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,8 +6,7 @@
   id="search"
   type="text"
   placeholder="{{ site.Data.constants.search_label }}"
-  aria-label="{{ site.Data.constants.search_label }}"
->
+  aria-label="{{ site.Data.constants.search_label }}">
 <div class="usa-checkbox">
   <input id="regex_mode" class="usa-checkbox__input" type="checkbox">
   <label class="usa-checkbox__label" for="regex_mode">
